[package]
name = "markdown-viewer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
gio = "0.19.2"
glib = "0.19.2"
gtk = "0.18.1"
markdown = "1.0.0-alpha.16"
webkit2gtk = "2.0.1"
